fixed home alignment

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -840,6 +840,9 @@ h2.title:before{
   background-color: #9b59b6;
 }
 
+.home-container{
+  margin-left: 140px;
+}
 /*#8e44ad*/
 /*#9900CC*/
 
